Added reduce and devicemaxd, reduce fails compiling, but it is not needed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ enable_language(CUDA)
 
 add_executable(test test.cu)
 
-set(STD_CUDA_FLAGS "-lineinfo ")
+set(STD_CUDA_FLAGS "-lineinfo -arch=compute_70 -code=sm_70")
 
 set_target_properties(test PROPERTIES COMPILE_FLAGS ${STD_CUDA_FLAGS})
