Compatibility to Visual studio 2022

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,10 @@ project(MultiGPUOpenMPCAMP)
 
 enable_language(CUDA)
 
+
 INCLUDE(${PROJECT_SOURCE_DIR}/data/CMakeLists.txt)
 
-set(STD_CUDA_FLAGS "-lineinfo -arch=compute_70 -code=sm_70 -dc --compiler-options '-fPIC'")
+set(STD_CUDA_FLAGS "-lineinfo -arch=compute_70 -code=sm_70 -dc")
 #set(STD_CUDA_FLAGS "-lineinfo -arch=compute_70 -code=sm_70 -dc --compiler-options '-fPIC -lcudart -lcublas -lcusolver -lcudadevrt -lcusparse_static -lculibos -lpthread -ldl'")
 
 set(CAMP_CUDA_SRC libsolv.cu)
@@ -19,6 +20,7 @@ set(CAMP_LIB_SRC ${CAMP_CUDA_SRC})
 add_library(camplib ${CAMP_LIB_SRC})
 target_link_libraries(camplib ${CUDA_LIBRARIES})
 set_target_properties(camplib PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(camplib PROPERTIES CUDA_ARCHITECTURES "70")
 set_target_properties(camplib PROPERTIES
         OUTPUT_NAME camp
         PREFIX lib
@@ -31,3 +33,6 @@ add_executable(test test.cu)
 target_link_libraries(test camplib)
 
 set_target_properties(test PROPERTIES COMPILE_FLAGS ${STD_CUDA_FLAGS})
+set_target_properties(test PROPERTIES CUDA_ARCHITECTURES "70")
+
+
