--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ enable_language(CUDA)
 
 INCLUDE(${PROJECT_SOURCE_DIR}/data/CMakeLists.txt)
 
-set(STD_CUDA_FLAGS "--ftz=true-lineinfo -arch=compute_70 -code=sm_70 -dc") #-ftz=true 
+add_compile_definitions(SCALE=10000 NUM_DEVICES=4)
+
+set(STD_CUDA_FLAGS "--ftz=true -lineinfo -arch=compute_70 -code=sm_70 -dc") #-ftz=true 
 #set(STD_CUDA_FLAGS "-lineinfo -arch=compute_70 -code=sm_70 -dc --compiler-options '-fPIC -lcudart -lcublas -lcusolver -lcudadevrt -lcusparse_static -lculibos -lpthread -ldl'")
 
 set(CAMP_CUDA_SRC libsolv.cu)
