--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,25 @@
 cmake_minimum_required(VERSION 3.10)
-
 project(MultiGPUOpenMPCAMP)
+
+option(CSR "" OFF)
+option(CSCAtomic "" OFF)
+option(CSC_LOOP_ROWS "" OFF)
+
+if(CSR)
+    add_definitions(-DCSR)
+endif()
+
+if(CSC_ATOMIC)
+    add_definitions(-DCSC_ATOMIC)
+endif()
+
+if(CSC_LOOP_ROWS)
+    add_definitions(-DCSC_LOOP_ROWS)
+endif()
 
 enable_language(CUDA)
 
-INCLUDE(${PROJECT_SOURCE_DIR}/data/CMakeLists.txt)
-
-set(STD_CUDA_FLAGS "-lineinfo -arch=compute_70 -code=sm_70 -dc --compiler-options '-fPIC'")
-#set(STD_CUDA_FLAGS "-lineinfo -arch=compute_70 -code=sm_70 -dc --compiler-options '-fPIC -lcudart -lcublas -lcusolver -lcudadevrt -lcusparse_static -lculibos -lpthread -ldl'")
+set(STD_CUDA_FLAGS "-lineinfo -arch=compute_70 -code=sm_70 -dc")
 
 set(CAMP_CUDA_SRC libsolv.cu)
 set_source_files_properties(${CAMP_CUDA_SRC} PROPERTIES COMPILE_FLAGS
@@ -19,6 +31,7 @@ set(CAMP_LIB_SRC ${CAMP_CUDA_SRC})
 add_library(camplib ${CAMP_LIB_SRC})
 target_link_libraries(camplib ${CUDA_LIBRARIES})
 set_target_properties(camplib PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(camplib PROPERTIES CUDA_ARCHITECTURES "70")
 set_target_properties(camplib PROPERTIES
         OUTPUT_NAME camp
         PREFIX lib
@@ -31,3 +44,6 @@ add_executable(test test.cu)
 target_link_libraries(test camplib)
 
 set_target_properties(test PROPERTIES COMPILE_FLAGS ${STD_CUDA_FLAGS})
+set_target_properties(test PROPERTIES CUDA_ARCHITECTURES "70")
+
+
