developing a better CSR structure: template, the idea is to advance the values, like check the first column values (the value 0 of each column), if these values save in different rows, put to safe together in first iter of the threads, if not, search for the next value that accomplish the condition of not being in the same row

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(MultiGPUOpenMPCAMP)
 
 add_definitions(-DCSR)
+#add_definitions(-DPA) #development
 #add_definitions(-DCUID) #slower
 
 enable_language(CUDA)
@@ -15,11 +16,11 @@ set_source_files_properties(${CAMP_CUDA_SRC} PROPERTIES LANGUAGE CUDA)
 set_source_files_properties(${CAMP_CUDA_SRC} PROPERTIES CUDA_SOURCE_PROPERTY_FORMAT OBJ)
 
 set(CAMP_LIB_SRC ${CAMP_CUDA_SRC})
-add_library(camplib ${CAMP_LIB_SRC})
-target_link_libraries(camplib ${CUDA_LIBRARIES})
-set_target_properties(camplib PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-set_target_properties(camplib PROPERTIES CUDA_ARCHITECTURES "70")
-set_target_properties(camplib PROPERTIES
+add_library(bcglib ${CAMP_LIB_SRC})
+target_link_libraries(bcglib ${CUDA_LIBRARIES})
+set_target_properties(bcglib PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(bcglib PROPERTIES CUDA_ARCHITECTURES "70")
+set_target_properties(bcglib PROPERTIES
         OUTPUT_NAME camp
         PREFIX lib
         VERSION ${PACKAGE_VERSION}
@@ -28,7 +29,7 @@ set_target_properties(camplib PROPERTIES
         Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
 add_executable(test test.cu)
-target_link_libraries(test camplib)
+target_link_libraries(test bcglib)
 
 set_target_properties(test PROPERTIES COMPILE_FLAGS ${STD_CUDA_FLAGS})
 set_target_properties(test PROPERTIES CUDA_ARCHITECTURES "70")
