--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,11 @@ add_definitions(-DCSR)
 #add_definitions(-DPA) #development
 #add_definitions(-DCUID) #slower
 
-#find_package(MPI)
+find_package(MPI)
 #find_path(MPI_INCLUDE_DIR mpi.h #needed for mn5
 #        PATHS
 #        /apps/ACC/OPENMPI/4.1.5/GCC/include)
-#include_directories(${MPI_INCLUDE_DIR})
+#include_directories(${MPI_INCLUDE_DIR})#needed for mn5
 #enable_language(MPI)
 #include_directories(${MPI_INCLUDE_PATH})
 enable_language(CUDA)
