pre-debug gpu failing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_definitions(-DCSR)
 find_package(MPI)
 enable_language(CUDA)
 
-set(STD_CUDA_FLAGS "-g") #if debug: -g -G
+set(STD_CUDA_FLAGS "-g -O3") #if debug: -g -G
 
 set(CAMP_CUDA_SRC libsolv.cu)
 set_source_files_properties(${CAMP_CUDA_SRC} PROPERTIES COMPILE_FLAGS
@@ -18,11 +18,11 @@ set_source_files_properties(${CAMP_CUDA_SRC} PROPERTIES LANGUAGE CUDA)
 set_source_files_properties(${CAMP_CUDA_SRC} PROPERTIES CUDA_SOURCE_PROPERTY_FORMAT OBJ)
 
 set(CAMP_LIB_SRC ${CAMP_CUDA_SRC})
-add_library(bcglib ${CAMP_LIB_SRC})
-target_link_libraries(bcglib ${CUDA_LIBRARIES})
-set_target_properties(bcglib PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-set_target_properties(bcglib PROPERTIES CUDA_ARCHITECTURES "70")
-set_target_properties(bcglib PROPERTIES
+add_library(mainlib ${CAMP_LIB_SRC})
+target_link_libraries(mainlib ${CUDA_LIBRARIES})
+set_target_properties(mainlib PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(mainlib PROPERTIES CUDA_ARCHITECTURES "70")
+set_target_properties(mainlib PROPERTIES
         OUTPUT_NAME camp
         PREFIX lib
         VERSION ${PACKAGE_VERSION}
@@ -31,7 +31,7 @@ set_target_properties(bcglib PROPERTIES
         Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
 add_executable(test test.cu)
-target_link_libraries(test bcglib)
+target_link_libraries(test mainlib)
 
 set_target_properties(test PROPERTIES COMPILE_FLAGS ${STD_CUDA_FLAGS})
 set_target_properties(test PROPERTIES CUDA_ARCHITECTURES "70")
